<resources>
    <string name="app_name">misvago</string>
    <string name="benvenuto">Benvenut* su NomeAPP</string>
    <string name="Creaaccount">Crea un account</string>
    <string name="login">Accedi</string>
    <string name="accediConGoogle">Accedi con google</string>
    <string name="subtitleLogin">Accedi con le tue credenziali</string>
    <string name="indirizzoMail">Indirizzo Email</string>
    <string name="registrazione">Registrati</string>
    <string name="nome">Nome</string>
    <string name="cognome">Cognome</string>
    <string name="password">Password</string>
    <string name="passwordc">Conferma password</string>
    <string name="inserisciN">Inserisci il nome</string>
    <string name="inserisciC">Inserisci il cognome</string>
    <string name="inserisciE">Inserisci l\'indirizzo email</string>
    <string name="inserisciP">Inserisci la password</string>
    <string name="inserisciPC">Inserisci la password corrente</string>
    <string name="inserisciNC">Inserisci nome e cognome dell\'intestatario </string>
    <string name="inseriscinumero">Inserisci il numero della carta</string>
    <string name="inserisciimporto">Inserisci l\'importo</string>
    <string name="inserisciCP">Inserisci nuovamente la password</string>
    <string name="inserisciNP">Inserisci una nuova password</string>
    <string name="OTP">OTP</string>
    <string name="TitleOTP">Inserisci OTP</string>
    <string name="subtitleOTP">L\'OTP è stato inviato per email</string>
    <string name="ToastLogin">Non hai inserito password o email</string>
    <string name="benvenutoHome">Ciao, user! &#128075;</string>
    <string name="subtitleHome">Dove vorresti andare?</string>
    <string name="TitleProfilo">Profilo</string>
    <string name="GestioneProfilo">Gestisci il tuo account</string>
    <string name="wallet">Wallet</string>
    <string name="wallets">Saldo Wallet</string>
    <string name="datipagamento">Modifica i dati di pagamento</string>
    <string name="lingua">Cambia la lingua</string>
    <string name="logout">Logout</string>
    <string name="data">Inserisci la data di nascita</string>
    <string name="data1">Data</string>
    <string name="DatiAccount">Modifica i dati</string>
    <string name="DatiAccountP">Dati di pagamento</string>
    <string name="descrizionePagamenti">Aggiungi e gestisci i tuoi dati di pagamento.</string>


    <!-- TODO: Remove or change this placeholder text -->

    <string name="ToastOTP">Compila il campo OTP per continuare</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">esempio.esempio@dominio.esempio</string>
    <string name="passwordDimenticata">Non te la ricordi?</string>
    <string name="ReimpostaPassword">Reimposta Password</string>
    <string name="subtitleRecuperaPassword">Inserisci l\'indirizzo email associato al tuo account per poterlo recuperare</string>
    <string name="CreaAccount">Crea Account</string>
    <string name="haiAccount">Hai già un account?</string>
    <string name="Signin">Sign in</string>
    <string name="conferma">Conferma</string>
    <string name="CercaDestinazione">Cerca una destinazione</string>
    <string name="Raccomandati">Raccomandati per te</string>
    <string name="DestiazioniFamose">Destinazioni popolari</string>
    <string name="ProssimoViaggio">Prossimo Viaggio</string>
    <string name="LocalitaSuggerite">Località suggerite</string>
    <string name="confermato">Confermato</string>
    <string name="descrizione">Descrizione</string>
    <string name="CompraloOra">Compralo Ora</string>
    <string name="Attivato">Viaggio aggiunto nei preferiti</string>
    <string name="Disattivato">Viaggio eliminato dai preferiti</string>
    <string-array name="lingua">
        <item>inglese</item>
        <item>italiano</item>
    </string-array>
    <string name="mostraRecensioni">Mostra Recensioni</string>
    <string-array name="Regione">
        <item>Europa</item>
        <item>Africa</item>
        <item>Asia</item>
        <item>America</item>
        <item>Oceania</item>
        <item>Tutte le mete</item>
    </string-array>
    <string-array name="NumPersone">
        <item>Nessuno</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string-array name="Prezzo">
        <item>Crescente</item>
        <item>Decrescente</item>
    </string-array>
    <string name="titleTextDialog">Filtra Per:</string>
    <string name="Regione">Destinazione</string>
    <string name="NumeroPersoneDialog">Numero Persone</string>
    <string name="Prezzo">Prezzo</string>

    <string name="RiepilogoPrenotazione">Riepilogo Prenotazione</string>
    <string name="titoloDialogAcquisto">Complimenti, il tuo acquisto è andato a buon fine</string>
    <string name="testoAlertDialogAcquisto">Tutti i dettagli della fatturazioni saranno inviati alla sua casella di posta. Per maggiori dettagli può trovare la ricevuta nella sezione prenotazioni. Le auguriamo un buon viaggio.
    </string>
    <string name="ToastLogin1">Mail di google non registrata, registrati prima di entrare</string>
    <string name="Esplorazione">Esplorazione</string>
    <string name="Mare">Mare</string>
    <string name="Relax">Relax</string>
    <string name="Trekking">Trekking</string>
    <string name="Cultura">Cultura</string>
    <string name="Recensione">Scrivi una recensione</string>
    <string name="titoloRecensione">Inserisci un titolo</string>
    <string name="descrizioneRecensione">Inserisci una descrizione</string>
    <string name="InserisciRecensione">Scrivi una recensione</string>
    <string name="InserisciTitolo">Perfavore, inserisci un titolo alla tua recensione</string>
    <string name="InserisciTesto">Perfavore, descrivi la tua esperienza</string>
    <string name="InserisciValuta">Perfavore, inserisci una valutazione</string>
    <string name="PopupRecensione">Grazie per la tua collaborazione</string>
    <string name="nessunElemento">Nessun elemento nella tua lista </string>
    <string name="ErroreTesto">Mi dispiace, la connesione con il server è caduta</string>
    <string name="caricati">caricati</string>
    <string name="NotificaPagamento">Pagamento Effettuato</string>
</resources>