<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ExtraText"

    >

    <Button
        android:id="@+id/buttonRegistrati"
        style="@style/bottoneLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginButton"
        android:text="@string/conferma"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="UnknownId,UnknownIdInLayout"
        android:elevation="8dp"/>


    <TextView
        android:id="@+id/TitleRegistrazione"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrazione"
        android:textSize="@dimen/title"
        android:textStyle="bold"
        android:textColor="@color/black"

        app:layout_constraintBottom_toTopOf="@+id/linearLayoutRegistrazione"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.471" />

    <LinearLayout
        android:id="@+id/linearLayoutRegistrazione"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginTextEdit"
        android:layout_marginHorizontal="@dimen/marginButton"

        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/buttonRegistrati"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/inserisciNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inserisciN"
            android:textStyle="bold"
            android:textColor="@color/coloretestopiccolo"/>

        <EditText
            android:id="@+id/editTextNome"
            style="@style/textEditStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginLinearLayoutElements"
            android:background="@drawable/custom_text_edit"
            android:ems="10"

            android:hint="@string/nome"
            android:inputType="text"
            android:paddingVertical="@dimen/paddingEditTetxt"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inserisciC"
            android:textStyle="bold"
            android:textColor="@color/coloretestopiccolo"/>

        <EditText
            android:id="@+id/editTextCognome"
            style="@style/textEditStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginLinearLayoutElements"
            android:background="@drawable/custom_text_edit"
            android:ems="10"
            android:hint="@string/cognome"
            android:inputType="text"
            android:paddingVertical="@dimen/paddingEditTetxt"
            tools:ignore="MissingConstraints,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textViewdata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data"
            android:textStyle="bold"
            android:textColor="@color/coloretestopiccolo"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/paddingEditTetxt">

            <Button
                android:id="@+id/buttonData"
                style="@style/bottoneLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/paddingEditTetxt"
                android:text="@string/data1"
                tools:ignore="UnknownId,UnknownIdInLayout"
                android:elevation="8dp"/>
            <TextView
                android:id="@+id/textViewshowdata"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/paddingEditTetxt"
                android:textStyle="bold"
                android:textColor="@color/coloretestopiccolo"
                />
        </LinearLayout>


        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inserisciE"
            android:textStyle="bold"
            android:textColor="@color/coloretestopiccolo"/>



        <EditText
            android:id="@+id/editTextEmail"
            style="@style/textEditStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginLinearLayoutElements"
            android:background="@drawable/custom_text_edit"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingVertical="@dimen/paddingEditTetxt"
            tools:ignore="UnknownId,TouchTargetSizeCheck" />


        <TextView
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inserisciP"
            android:textStyle="bold"
            android:textColor="@color/coloretestopiccolo"/>

        <EditText
            android:id="@+id/editTextPassword"
            style="@style/textEditStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginLinearLayoutElements"
            android:background="@drawable/custom_text_edit"
            android:ems="10"

            android:inputType="textPassword"
            android:paddingVertical="@dimen/paddingEditTetxt"
            />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inserisciCP"
            android:textStyle="bold"
            android:textColor="@color/coloretestopiccolo"/>

        <EditText
            android:id="@+id/editTextTextPasswordConferma"
            style="@style/textEditStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginLinearLayoutElements"
            android:background="@drawable/custom_text_edit"
            android:ems="10"

            android:inputType="textPassword"
            android:paddingVertical="@dimen/paddingEditTetxt"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>