<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.OTPFragment">


    <LinearLayout
        android:id="@+id/linearLayoutRegistrazioneOTP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginTextEdit"
        android:layout_marginHorizontal="@dimen/marginButton"

        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/TitleOTP"
                android:textSize="@dimen/sizeText"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subtitleLogin" />
        </LinearLayout>

        <EditText
            android:id="@+id/editTextOTP"
            style="@style/textEditStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginLinearLayoutElements"
            android:background="@drawable/custom_text_edit"
            android:ems="10"
            android:hint="@string/OTP"
            android:inputType="textPassword"
            android:paddingVertical="@dimen/paddingEditTetxt"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/buttonOTP"
            style="@style/bottoneLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/marginButton"
            android:text="@string/conferma"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/editTextText3"
            app:layout_constraintStart_toStartOf="@+id/editTextText3"
            app:layout_constraintTop_toBottomOf="@+id/editTextText3" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>