<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_login_border"
    tools:context=".Login.Login">

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/subtitleLogin"
        app:layout_constraintBottom_toTopOf="@id/contenitore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/titoloSchermataIniziale"
        app:layout_constraintTop_toBottomOf="@id/titoloSchermataIniziale"
        app:layout_constraintVertical_bias="0.01999998" />

    <TextView
        android:id="@+id/titoloSchermataIniziale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/ReimpostaPassword"
        android:textSize="@dimen/title"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.050000012"
        app:layout_constraintVertical_chainStyle="packed" />

    <FrameLayout
        android:id="@+id/contenitore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginTextEdit"
        app:layout_constraintBottom_toTopOf="@id/CreaAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/subtitle"
        app:layout_constraintTop_toBottomOf="@id/subtitle">

        <EditText
            android:id="@+id/emailRecuperaPassword"
            style="@style/textEditStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_text_edit"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="text" />
    </FrameLayout>

    <Button
        android:id="@+id/CreaAccount"
        style="@style/bottoneLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginButton"
        android:backgroundTint="@color/palette1"
        android:text="@string/conferma"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contenitore" />

</androidx.constraintlayout.widget.ConstraintLayout>