<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_login_border"
    tools:context=".Login.Login">

    <Button
        android:id="@+id/conferma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/marginButton"
        android:layout_marginBottom="@dimen/maginBottoneSchermataIniziale"
        android:backgroundTint="@color/palette1"
        android:text="@string/conferma"
        app:layout_constraintBottom_toTopOf="@+id/haiAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.110000014"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/haiAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/haiAccount"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/signin"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/conferma" />

    <TextView
        android:id="@+id/signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/Signin"
        android:textColor="@color/palette1"
        app:layout_constraintBottom_toBottomOf="@+id/haiAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/haiAccount"
        app:layout_constraintTop_toTopOf="@+id/haiAccount" />

</androidx.constraintlayout.widget.ConstraintLayout>